--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,21 +1,17 @@
 #!/usr/bin/env groovy
-@Library('jenkins-shared-library') _
 
 pipeline {
     agent any
 
     tools {
-        nodejs 'nodejs_10.15.3'
     }
 
     stages {
         stage('Generate node_modules') {
             steps {
                 // Remove old node_module
-                sh 'rm -rf node_modules'
                 // Generate node_modules
-                sh 'yarn'
-                sh 'yarn test-with-coverage'
+                sh 'echo "TEST"'
 
             }
         }
@@ -30,7 +26,7 @@ pipeline {
                 }
             }
         }
-        stage('Migrate DB') {
+        stage('Run Application') {
             steps {
                 script {
                     sh '''
